<resources>
    <string name="app_name">Fraseodiccionario Brorán</string>
    <string name="action_credits">Créditos</string>
    <string name="action_aclaration">Aclaración</string>
    <string name="action_help">Ayuda</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_caso_letra1">casoLetra1</string>
    <string name="valor_por_defecto_seccion"></string>
    <string name="numero_de_seccion_por_defecto">/20</string>
    <string name="lugar_izquierda">Costa Rica</string>
    <string name="lugar_derecha">Panamá</string>
    <string name="genero_izquierda">Mujer</string>
    <string name="genero_derecha">Hombre</string>
    <string name="pista_ingreso_de_seccion">1</string>
    <string name="opcion_siguiente">Siguiente</string>
    <string name="opcion_atras">Atrás</string>
    <string name="descripcion_img_frase">Imagen acorde a la frase</string>
    <string name="indice1">Información personal</string>
    <string name="indice2">Para contestar ‘sí’ o ‘no’   </string>
    <string name="indice3">Saludos</string>
    <string name="indice4">Despedidas</string>
    <string name="indice5">Agradecimiento</string>
    <string name="indice6">Estados físicos</string>
    <string name="indice7">Estados emocionales</string>
    <string name="indice8">Los momentos del día</string>
    <string name="indice9">Órdenes básicas</string>
    <string name="indice10">Solicitudes</string>
    <string name="indice11">Para pedir permiso para hacer algo</string>
    <string name="indice12">Actividades</string>
    <string name="indice13">Para expresar gustos</string>
    <string name="indice14">Preguntas</string>
    <string name="indice15">Otras expresiones útiles</string>
    <string name="encabezado">
        UNIVERSIDAD DE COSTA RICA \n
        VICERRECTORÍA DE ACCIÓN SOCIAL \n
        SECCIÓN DE TRABAJO COMUNAL UNIVERSITARIO \n
        ESCUELA DE FILOLOGÍA, LINGÜÍSTICA Y LITERATURA \n
        TC-625 "LENGUAS Y TRADICIONES ORALES DE COSTA RICA"
    </string>
    <string name="nombre">Fraseodiccionario con audio</string>
    <string name="hablantes_T">Hablantes naso con quienes se realizó la documentación:</string>
    <string name="propuesta_T">Propuesta del proyecto y guión original:</string>
    <string name="voces_T">Voces de los audios:</string>
    <string name="documentacion_T">Documentación lingüística y organización:</string>
    <string name="ilustraciones_T">Ilustraciones:</string>
    <string name="programadores_T">Programación de la aplicación: </string>
    <string name="disenador_T">Diseñadora gráfica: </string>
    <string name="ortografia_T">Ortografía práctica utilizada:</string>
    <string name="revision_T">Revisión y validación de ilustraciones:</string>
    <string name="coordinacion_T">Coordinación del proyecto:</string>
    <string name="contacto_T">Contacto:</string>
    <string name="hablantes_N">
        Inés Villagra Sánchez \n
        Florencio Gamarra Rodríguez
    </string>
    <string name="propuesta_N">Leonardo Porras Cabrera</string>
    <string name="voces_N">
        Inés Villagra Sánchez \n
        Florencio Gamarra Rodríguez
    </string>
    <string name="documentacion_N">Carlos Sánchez Avendaño</string>
    <string name="ilustraciones_N">David Espinoza Morera</string>
    <string name="programadores_N">
        Daniel Escamilla León Páez\n
        Daniel Salazar\n
        Esteban Rojas Solís\n
        Jesús Casasola Calvo\n
        Sebastián Vargas Soto
    </string>
    <string name="disenadores_N">
        Raquel Esquivel
    </string>
    <string name="ortografia_N">La propuesta por Adolfo Constenla Umaña de La lengua de Térraba</string>
    <string name="revision_N">
        José Luis Navas Rivera\n
        Leonardo Porras Cabrera\n
        Asdrúbal Rivera Villanueva
    </string>
    <string name="coordinacion_N">Carlos Sánchez Avendaño</string>
    <string name="contacto_N">dipalicori.efll@ucr.ac.cr</string>
    <string name="info_ucr">
        \n\nMaterial de distribución gratuita \n\nLa creación de este material fue posible gracias al financiamiento de la Vicerrectoría de Acción Social de la Universidad de Costa Rica
    </string>
    <string name="titulo_aclaracion">Aclaración sobre la variedad del idioma y la escritura en esta  aplicación</string>
    <string name="aclaracion1">En esta aplicación se incluyen las expresiones en <b>idioma brorán</b> que fueron documentadas con los últimos
        hablantes en el libro <b>La lengua de Térraba de Adolfo Constenla Umaña</b>. Cuando en este libro no aparecieron, se buscaron en la documentación
        del <b>siglo XIX</b>. Si no se encontró información en ninguna de estas fuentes, se incluyó la forma del naso de Panamá.
    </string>
    <string name="aclaracion2">Se usa la escritura diseñada por <b>Adolfo Constenla</b> para el <b>brorán</b>, no la empleada para el naso panameño. Por esto,
        la <i><b>pj</b></i> del naso panameño se escribe aquí con <i><b>p\'</b></i>, en concordancia con las formas <i><b>t\'</b></i> (no tj) y <i><b>c\'</b></i> (no kj) usadas por Constenla, aunque no
        existe en la propuesta de este autor la letra <i><b>p\'</b></i>, debido a que este sonido no existe en la variedad del idioma brorán. Las expresiones
        con <i><b>p\'</b></i> en lugar de <i><b>f</b></i> se ponen en un <b>color diferente</b> para indicar que corresponden a la pronunciación del naso panameño.
    </string>
    <string-array name="categorias">
        <item>Información Personal</item>
        <item>Para contestar ‘sí’ o ‘no’</item>
        <item>Saludos</item>
        <item>Despedidas</item>
        <item>Agradecimiento</item>
        <item>Estados Físicos</item>
        <item>Estados emocionales</item>
        <item>Los momentos del día</item>
        <item>Órdenes básicas</item>
        <item>Solicitudes</item>
        <item>Para pedir permiso para hacer algo</item>
        <item>Actividades</item>
        <item>Para expresar gustos</item>
        <item>Preguntas</item>
        <item>Otras expresiones útiles</item>
    </string-array>
    <string-array name="categoria1">
        <item>¿Cómo se llama usted?</item>
        <item>Me llamo____</item>
        <item>¿Cuántos años tiene usted?</item>
        <item>Tengo_____años</item>
        <item>¿Dónde vive usted?</item>
        <item>Vivo en Brorán/ Soy de Brorán</item>
        <item>Soy brorán</item>
        <item>Vivo en Bijagual / Soy de Bijagual</item>
        <item>¿Cómo se llama su mamá?</item>
        <item>Mi mamá se llama</item>
        <item>¿Cómo se llama su papá?</item>
        <item>Mi papá se llama</item>
        <item>¿Usted tiene hermanos?</item>
    </string-array>
    <string-array name="categoria2">
        <item>Sí</item>
        <item>No</item>
    </string-array>
    <string-array name="categoria3">
        <item>Hola (a cualquier hora)</item>
        <item>¿Cómo estás?</item>
        <item>¿Cómo están?</item>
        <item>¿Cómo estás? (Al amanecer)</item>
        <item>¿Cómo están? (Al amanecer) </item>
        <item>¿Cómo estás? (A media mañana)</item>
        <item>¿Cómo están? (A media mañana)  </item>
        <item>¿Cómo estás? (Antes del mediodía) ​</item>
        <item>¿Cómo están? (Antes del mediodía) ​</item>
        <item>¿Cómo estás? (Al mediodía) </item>
        <item>¿Cómo están? (Al mediodía) </item>
        <item>¿Cómo estás? (Después del mediodía) </item>
        <item>¿Cómo están? (Después del mediodía) </item>
        <item>¿Cómo estás? (A media tarde) </item>
        <item>¿Cómo están? (A media tarde) </item>
        <item>¿Cómo estás? (Avanzada la tarde) </item>
        <item>¿Cómo están? (Avanzada la tarde) </item>
        <item>¿Cómo estás? (En la noche) </item>
        <item>¿Cómo están? (En la noche) </item>
        <item>Bien, bien (respuesta al saludo) </item>
        <item>Bien (respuesta al saludo) </item>
        <item>Y usted, ¿cómo está?</item>
        <item>Y ustedes, ¿cómo están? </item>
        <item>¿Y usted? </item>
        <item>¿Y ustedes?</item>
        <item>_Yo también </item>
        <item>_Igual a usted  </item>
        <item>Bienvenido (literalmente ‘entre a la casa’) </item>
        <item>Bienvenidos (literalmente ‘entren a la casa’) </item>

    </string-array>
    <string-array name="categoria4">
        <item>Hasta luego (lo dice una persona)</item>
        <item>Hasta luego (lo dice una persona)</item>
        <item>Hasta luego (lo dice más de una persona)</item>
        <item>Adiós/hasta luego (lo dice una persona)</item>
        <item>Adiós/hasta luego (lo dice más de una persona)</item>
        <item>Adiós/hasta luego (respuesta a la despedida)</item>
        <item>Vámonos </item>
        <item>Vaya con Dios/Que Dios lo acompañe</item>
    </string-array>
    <string-array name="categoria5">
        <item>Gracias</item>
    </string-array>
    <string-array name="categoria6">
        <item>Tengo frío</item>
        <item>Tengo calor</item>
        <item>Tengo sueño</item>
        <item>Tengo hambre</item>
        <item>Tengo sed</item>
        <item>Estoy enfermo(a)</item>
        <item>Tengo dolor de cabeza</item>
        <item>Estoy muy lleno</item>
    </string-array>
    <string-array name="categoria7">
        <item>Estoy feliz</item>
        <item>Estoy triste</item>
        <item>Estoy enojado</item>
        <item>Estoy aburrido</item>
        <item>Estoy cansado </item>
    </string-array>
    <string-array name="categoria8">
        <item>¿Qué hora es?/¿Qué momento del día es?</item>
        <item>Al amanecer</item>
        <item>A media mañana</item>
        <item>Antes del mediodía</item>
        <item>Mediodía</item>
        <item>Después del mediodía</item>
        <item>A media tarde</item>
        <item>Al atardecer</item>
        <item>Alrededor de las 5:45 pm </item>
        <item>Noche (sin luz)</item>
    </string-array>
    <string-array name="categoria9">
        <item>Vaya (a un lugar)</item>
        <item>Vayan (a un lugar)</item>
        <item>Váyase</item>
        <item>Vaya en dirección horizontal</item>
        <item>Vayan en dirección horizontal</item>
        <item>Vaya hacia arriba</item>
        <item>Vayan hacia arriba</item>
        <item>Vaya hacia abajo</item>
        <item>Vayan hacia abajo</item>
        <item>Venga hacia abajo</item>
        
        
        <item>Vengan</item>
        <item>Venga en dirección horizontal</item>
        <item>Vengan en dirección horizontal</item>
        <item>Venga hacia arriba</item>
        <item>Vengan hacia arriba</item>
        <item>Venga hacia abajo</item>
        <item>Vengan hacia abajo</item>
        <item>Siéntese</item>
        <item>Siéntense</item>
        <item>Póngase de pie</item>
        <item>Pónganse de pie</item>
        <item>Cante</item>
        <item>Canten</item>
        <item>Escuche</item>
        <item>Repita</item>
        <item>Haga silencio</item>
        <item>Hagan silencio</item>
        <item>No salga</item>
        <item>No salgan </item>
        <item>Espérese</item>
        <item>Repita </item>
    </string-array>
    <string-array name="categoria10">
        <item>Deme comida</item>
        <item>Deme más comida</item>
        <item>Deme agua</item>
        <item>Deme más agua</item>
        <item>Deme café </item>
        <item>Deme un cafecito (solicitud con cortesía)</item>
        <item>Quiero ir al baño</item>
        <item>Quiero ir a la escuela</item>
        <item>No quiero ir a la escuela</item>
        <item>Quiero irme a la casa</item>
    </string-array>
    <string-array name="categoria11">
        <item>Para pedir permiso para hacer algo</item>
    </string-array>
</resources>