<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    tools:context=".AclaracionActivity">

    <ScrollView
        android:name="@+id/title_activity_aclaracion"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:scrollbars="vertical"
        tools:context=".AclaracionActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="16dp"
            android:paddingRight="16dp">

            <Space
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:layout_weight="1"></Space>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:paddingBottom="10dp"
                android:text="@string/titulo_aclaracion"
                android:textAlignment="center"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="18dp"
                android:textStyle="bold" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:justificationMode="inter_word"
                android:paddingTop="15dp"
                android:text="@string/aclaracion1"
                android:textColor="#25383C"
                android:textSize="16dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:justificationMode="inter_word"
                android:paddingTop="5dp"
                android:paddingBottom="3dp"
                android:text="@string/aclaracion2"
                android:textColor="#25383C"
                android:textSize="16dp" />


        </LinearLayout>

    </ScrollView>
</RelativeLayout>